colors+ forgot password

--- a/app/src/main/res/drawable/dark_message_background.xml
+++ b/app/src/main/res/drawable/dark_message_background.xml
@@ -3,6 +3,6 @@
     <corners
         android:radius="15dp"
         android:topRightRadius="0dp"/>
-    <solid android:color="#8A9A50"/>
+    <solid android:color="#9ABA92"/>
 
 </shape>
