--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -57,6 +57,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:elevation="1dp"
         android:id="@+id/chatPageMessageList"
+        android:layout_marginBottom="5dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="2dp"
@@ -103,6 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#40FFFFFF"
+            android:layout_margin="10dp"
             android:hint="message..."
             android:textIsSelectable="true"
             android:textSize="20sp"
