--- a/app/src/main/res/layout/activity_chat_page.xml
+++ b/app/src/main/res/layout/activity_chat_page.xml
@@ -57,6 +57,7 @@
         android:elevation="1dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginHorizontal="3dp"
         app:layout_constraintBottom_toTopOf="@+id/messageCardc"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +86,6 @@
         android:layout_marginBottom="5dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="20dp"
-        android:background="@color/backGround"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -101,6 +101,7 @@
             android:layout_height="wrap_content"
             android:background="#40FFFFFF"
             android:hint="message..."
+            android:layout_margin="10dp"
             android:textIsSelectable="true"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
