--- a/app/src/main/res/layout/left_file_adapter.xml
+++ b/app/src/main/res/layout/left_file_adapter.xml
@@ -31,7 +31,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="2dp"
         android:text="time"
-        android:textColor="#FAF5F5"
+        android:textColor="@color/text"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
