--- a/app/src/main/res/layout/left_file_group_adapter.xml
+++ b/app/src/main/res/layout/left_file_group_adapter.xml
@@ -29,7 +29,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="2dp"
         android:text="time"
-        android:textColor="#FAF5F5"
+        android:textColor="@color/text"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
         app:layout_constraintEnd_toEndOf="parent"
