--- a/app/src/main/res/layout/right_file_adapter.xml
+++ b/app/src/main/res/layout/right_file_adapter.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="time"
-        android:textColor="#000000"
+        android:textColor="@color/text"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
