--- a/app/src/main/res/layout/right_message_group_adapter.xml
+++ b/app/src/main/res/layout/right_message_group_adapter.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="time-is-long"
-                android:textColor="#000000"
+                android:textColor="@color/text"
                 android:textSize="8sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1"
@@ -47,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="hi"
-                android:textColor="#000000"
+                android:textColor="@color/text"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3g"
