app re-design+ new features

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -123,7 +123,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
-            android:text="We do not have our own servers. To pay for those servers we earn revenue from ads"
+            android:text="We do not have our own servers, So we buy those from trusted brands like amazon and google. To pay for those servers we use ads."
             android:textColor="@color/colorAccent"
             android:gravity="center"
             android:textSize="16dp"
@@ -163,7 +163,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
-            android:text="We oath to never sell your data, So enjoy, your data is safe. This is an end-to-end Highly Encrypted Chat Application, So its extremely difficult for hackers can access your data"
+            android:text="We oath to never sell your data, We respect your privacy, your data is safe. All your data is stored in Encrypted form in the database, so even if they got hacked (which is extremely difficult), your data would be safe."
             android:textColor="@color/colorAccent"
             android:gravity="center"
             android:textSize="16dp"
@@ -203,7 +203,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="5dp"
-            android:text="Currently I am a student, and I would really really appreciate, If you would donate for my studies."
+            android:text="Currently I am a student, and I would really appreciate, If you would donate for my studies and betterment of this app."
             android:textColor="@color/colorAccent"
             android:gravity="center"
             android:textSize="16dp"
