--- a/app/src/main/res/layout/activity_chat_page.xml
+++ b/app/src/main/res/layout/activity_chat_page.xml
@@ -27,7 +27,7 @@
         android:layout_width="57dp"
         android:layout_height="0dp"
         android:layout_margin="3dp"
-        android:src="@drawable/blue"
+        android:src="@drawable/profile_user"
         app:civ_border_color="#FF000000"
         app:civ_border_width="1dp"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
