--- a/app/src/main/res/layout/change_password_dialog.xml
+++ b/app/src/main/res/layout/change_password_dialog.xml
@@ -27,7 +27,7 @@
         android:layout_height="50dp"
         android:ems="10"
         android:hint="Enter Email Id..."
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textAlignment="center"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
