--- a/app/src/main/res/layout/left_file_adapter.xml
+++ b/app/src/main/res/layout/left_file_adapter.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/background"
-    android:elevation="10dp"
-    >
+    android:elevation="10dp">
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="50sp"
+        android:layout_marginLeft="5sp"
         android:layout_marginTop="5sp"
-        android:layout_marginRight="5sp"
+        android:layout_marginRight="50sp"
         android:layout_marginBottom="5sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,20 +21,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/dark_message_background" />
+        app:srcCompat="@drawable/light_message_background" />
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="2dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="time"
         android:textColor="@color/text"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.96"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/openBtn"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
@@ -45,6 +44,7 @@
         android:layout_width="150dp"
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="20sp"
         android:background="@drawable/btn_background"
         android:text="open"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
@@ -70,10 +70,12 @@
         android:layout_width="27dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="TextView"
+        android:rotation="0"
+        android:rotationY="0"
         android:textColor="#000000"
-        android:textSize="10dp"
+        android:text="type"
         android:textStyle="bold"
+        android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintStart_toStartOf="@+id/imageView4"
