--- a/app/src/main/res/layout/left_msg_grp_adapter.xml
+++ b/app/src/main/res/layout/left_msg_grp_adapter.xml
@@ -47,7 +47,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="hi"
+                android:autoLink="all"
                 android:textColor="@color/text"
+                android:textColorLink="@color/linkColor"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3g"
