--- a/app/src/main/res/layout/request_to_join_group_adapter.xml
+++ b/app/src/main/res/layout/request_to_join_group_adapter.xml
@@ -13,7 +13,7 @@
         android:layout_height="57dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/blue"
+        android:src="@drawable/profile_user"
         app:civ_border_color="#000000"
         app:civ_border_width="1dp" />
 
