--- a/app/src/main/res/layout/right_msg_adapter.xml
+++ b/app/src/main/res/layout/right_msg_adapter.xml
@@ -48,6 +48,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="hi"
+                android:autoLink="all"
+                android:textColorLink="@color/linkColor"
                 android:textColor="@color/text"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
