--- a/app/src/main/res/layout/right_msg_grp_adapter.xml
+++ b/app/src/main/res/layout/right_msg_grp_adapter.xml
@@ -47,6 +47,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="hi"
+                android:autoLink="all"
+                android:textColorLink="@color/linkColor"
                 android:textColor="@color/text"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3g"
