--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="transpirent">#66EDC0C1</color>
     <color name="nullColor">#00FFFFFF</color>
     <color name="text">#000000</color>
+    <color name="linkColor">#096CC3</color>
 
 <!--    <color name="backGround">#F3F6E3</color>-->
 <!--    <color name="colorPrimary">#D7E69D</color>-->
