--- a/app/src/main/res/layout/activity_group_visit.xml
+++ b/app/src/main/res/layout/activity_group_visit.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                android:src="@drawable/ic_launcher_background"/>
 
             <TextView
                 android:id="@+id/namegv"
