--- a/app/src/main/res/layout/right_img_adapter.xml
+++ b/app/src/main/res/layout/right_img_adapter.xml
@@ -34,8 +34,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
+                android:layout_marginBottom="2dp"
                 android:elevation="10dp"
+                android:background="@drawable/curved_rectangle"
                 android:text="time-is-long"
+                android:gravity="center"
+                android:paddingVertical="2dp"
+                android:paddingHorizontal="5dp"
                 android:textColor="@color/text"
                 android:textSize="8sp"
                 app:layout_constraintBottom_toBottomOf="@+id/showMessage"
@@ -48,7 +53,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/showMessage"
                 app:cardCornerRadius="4dp"
-                android:elevation="0dp"
+                android:elevation="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
