--- a/app/src/main/res/layout/right_img_grp_adapter.xml
+++ b/app/src/main/res/layout/right_img_grp_adapter.xml
@@ -11,23 +11,23 @@
         android:id="@+id/layoutrma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5sp"
+        android:layout_marginStart="50sp"
         android:layout_marginTop="5sp"
-        android:layout_marginEnd="50sp"
+        android:layout_marginEnd="5sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" >
+        app:layout_constraintVertical_bias="1.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/imageView3"
-            android:layout_gravity="end"
-            android:padding="7dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/light_message_background">
+            android:layout_gravity="end"
+            android:background="@drawable/dark_message_background"
+            android:padding="7dp">
 
             <TextView
                 android:id="@+id/time"
@@ -35,40 +35,54 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="2dp"
+                android:background="@drawable/curved_rectangle"
                 android:elevation="10dp"
+                android:gravity="center"
+                android:paddingHorizontal="5dp"
+                android:paddingVertical="2dp"
                 android:text="time-is-long"
                 android:textColor="@color/text"
                 android:textSize="8sp"
-                android:background="@drawable/curved_rectangle"
-                android:gravity="center"
-                android:paddingVertical="2dp"
-                android:paddingHorizontal="5dp"
                 app:layout_constraintBottom_toBottomOf="@+id/showMessage"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/showMessage"
                 app:layout_constraintTop_toTopOf="@+id/showMessage"
                 app:layout_constraintVertical_bias="1.0"
-                app:layout_constraintHorizontal_bias="1.0"
                 tools:ignore="SmallSp" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/showMessage"
-                app:cardCornerRadius="4dp"
-                android:elevation="0dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:elevation="0dp"
+                app:cardCornerRadius="4dp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="@+id/imageView3"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/imageView3"
                 app:layout_constraintTop_toTopOf="@+id/imageView3"
-                app:layout_constraintVertical_bias="0.0" >
+                app:layout_constraintVertical_bias="0.0">
+
                 <ImageView
                     android:id="@+id/showMessageFile"
-                    android:scaleType="centerCrop"
                     android:layout_width="300dp"
                     android:layout_height="230dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/ic_launcher_background" />
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
+
+    <TextView
+        android:visibility="gone"
+        android:id="@+id/textView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toTopOf="@+id/layoutrma"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
