--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -212,7 +212,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="1dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@id/messageCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -222,7 +222,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/color"
-        android:background="#09C382"
+        android:background="@color/meetCardBg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -231,7 +231,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_background"
-            android:backgroundTint="@color/linkColor"
             android:text="Join"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -248,6 +247,8 @@
             android:text="Created By : "
             android:textColor="#000000"
             android:textSize="24sp"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/joinMeetBtn"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -260,6 +261,7 @@
             android:text="Name"
             android:textColor="#000000"
             android:textSize="18sp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView31"
             app:layout_constraintStart_toEndOf="@+id/textView31"
             app:layout_constraintTop_toTopOf="@+id/textView31" />
