--- a/app/src/main/res/layout/activity_chat_page.xml
+++ b/app/src/main/res/layout/activity_chat_page.xml
@@ -65,13 +65,13 @@
         app:layout_constraintTop_toBottomOf="@+id/adView2" />
 
     <androidx.cardview.widget.CardView
-        android:visibility="gone"
         android:id="@+id/include"
+        android:visibility="gone"
         layout="@layout/meeting_adapter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="1dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@id/messageCardc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -81,7 +81,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/color"
-            android:background="#09C382"
+            android:background="@color/meetCardBg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -90,7 +90,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_background"
-                android:backgroundTint="@color/linkColor"
                 android:text="Join"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +106,8 @@
                 android:text="Created By : "
                 android:textColor="#000000"
                 android:textSize="24sp"
+                android:layout_marginBottom="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/joinMeetBtn"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +120,7 @@
                 android:text="Name"
                 android:textColor="#000000"
                 android:textSize="18sp"
+                android:layout_marginBottom="5dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView31"
                 app:layout_constraintStart_toEndOf="@+id/textView31"
                 app:layout_constraintTop_toTopOf="@+id/textView31" />
