--- a/app/src/main/res/layout/request_to_join_group_adapter.xml
+++ b/app/src/main/res/layout/request_to_join_group_adapter.xml
@@ -27,7 +27,7 @@
         android:layout_marginBottom="5dp"
         android:layout_toEndOf="@id/chat_profile_picrga"
         android:singleLine="true"
-        android:text="OzChat"
+        android:text="Affix"
         android:textColor="#000"
         android:textSize="16sp"
         android:textStyle="bold" />
