--- a/app/src/main/res/layout/activity_group_visit.xml
+++ b/app/src/main/res/layout/activity_group_visit.xml
@@ -121,6 +121,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/settingsgv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -216,7 +217,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="1dp"
                 app:adSize="SMART_BANNER"
-                app:adUnitId="ca-app-pub-3940256099942544/2934735716"
+                app:adUnitId="ca-app-pub-1155879823920026/5932314261"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
