--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:gravity="center"
-        android:text="Welcome to Chat app"
+        android:text="Welcome to Affix"
         android:textColor="@color/colorAccent"
         android:textSize="36sp"
         android:textStyle="italic"
