--- a/app/src/main/res/layout/user_addapter.xml
+++ b/app/src/main/res/layout/user_addapter.xml
@@ -26,7 +26,7 @@
         android:layout_marginBottom="5dp"
         android:layout_toEndOf="@id/chat_profile_pic"
         android:singleLine="true"
-        android:text="OzChat"
+        android:text="Affix"
         android:textColor="#000"
         android:textSize="16sp"
         android:textStyle="bold" />
