--- a/app/src/main/res/menu/image_view_menu.xml
+++ b/app/src/main/res/menu/image_view_menu.xml
@@ -5,4 +5,8 @@
         android:icon="@android:drawable/stat_sys_download"
         android:title="download"
         app:showAsAction="always" />
+    <item android:id="@+id/back"
+        android:icon="?attr/actionModeCloseDrawable"
+        android:title="download"
+        app:showAsAction="always" />
 </menu>
